change nav to flex to avoid overlapping logo

--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,13 @@ body {
   padding-bottom: 15px;
   height: auto;
   width: 100%;
-  display: block;
+  display: flex;
   text-align: left;
 }
 a.navbar-brand{
   font-weight: 800;
   color: #61dbfb!important;
-  position: absolute;
-  top: 8px;
+  display: inline-block;
 }
 .logo {
   color: white;
@@ -39,6 +38,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: fit-content;
+  display: inline-block;
 }
 .board-row:after {
   clear: both;
